namespace eShopX.Domain.Aggregates.Sizes;

public enum SizeType
{
    Clothing,
    Pants,
    Shoes,
    Hat
}
