@startuml
' Aggregate: Sizes
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

class Size <<AggregateRoot>> #D4E6F1 {
  +Name: string
  +Type: SizeType
  +CreatedAt: DateTime
  +UpdatedAt: DateTime
  ..
  +Rename()
}

enum SizeType #FEF9E7 {
  Clothing
  Pants
  Shoes
  Hat
}

' --- Inheritance ---
Size --|> AggregateRoot

' --- Composition ---
Size --> SizeType

' --- Domain Events ---

@enduml